Initial development version of sysectl.  Probably still very buggy etc.

--- a/Kconfig
+++ b/Kconfig
@@ -10,6 +10,7 @@ source "scripts/Kconfig.include"
 source "init/Kconfig"
 
 source "kernel/Kconfig.freezer"
+source "kernel/Kconfig.sysectl"
 
 source "fs/Kconfig.binfmt"
 
