arch/lkl: fix "make olddefconfig" with CONFIG_CPU_BIG_ENDIAN=y
LKL's final kernel config is created by appending the
tools/lkl/Makefile.autoconf generated kernel.config to .config and
then calling "make ARCH=lkl olddefconfig".
With the existing config CPU_BIG_ENDIAN setting of "def_bool n", a
.config with CONFIG_CPU_BIG_ENDIAN=y appended will drop the
CONFIG_CPU_BIG_ENDIAN=y setting when "make ARCH=lkl olddefconfig" is
called.
This issue is resolved by changing config CPU_BIG_ENDIAN to:
	bool "Big-endian kernel"
	default n

Signed-off-by: David Disseldorp <ddiss@suse.de>

--- a/arch/lkl/Kconfig
+++ b/arch/lkl/Kconfig
@@ -91,7 +91,8 @@ config COREDUMP
        def_bool n
 
 config CPU_BIG_ENDIAN
-       def_bool n
+       bool "Big-endian kernel"
+       default n
 
 config GENERIC_CSUM
        def_bool y
